[package]
name = "enclosure"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
caps = "0.5.5"
clap = { version = "4.5.39", features = ["derive"] }
memmap2 = "0.9.5"
nix = { version = "0.30.1", features = ["event", "feature", "fs", "sched", "signal", "user"] }
once_cell = "1.21.3"
